--- a/less/global.less
+++ b/less/global.less
@@ -13,6 +13,11 @@ html{
         .container{
             width: 85%;
             margin: 0 auto;
+            @media @tablet {
+                width: 95%;
+                margin: 0 5px 0 10px;
+                
+            }
             .hidden{
                 display: none;
             }
