--- a/less/nav.less
+++ b/less/nav.less
@@ -42,12 +42,12 @@
   background-color: #9AA4AE;
   opacity: 0.9;
   margin: 0 auto;
-  // @media @tablet {
-  //     width: 90%;
-  // }
-  // @media @mobile {
-  //     width: 100%;
-  // }
+  @media @tablet {
+      width: 90%;
+  }
+  @media @mobile {
+      width: 100%;
+  }
   .menu-items {
       display: flex;
       flex-direction: column;
