--- a/less/variables.less
+++ b/less/variables.less
@@ -45,3 +45,7 @@
 @nav-exp-txt-size: 48px;
 @nav-exp-line-height: 85px;
 @nav-exp-hover-color: #222222;
+
+//Media query var
+@mobile: ~'(max-width: 769px)';
+@tablet: ~'(max-width: 1025px)';
