--- a/less/header.less
+++ b/less/header.less
@@ -13,6 +13,13 @@
         line-height: @header-line-height;
         color: @tab-hover-color;
         padding-left: 80px;
+        @media @mobile {
+            font-size: 1.3rem;
+            line-height: 15px;
+            bottom: 35px;
+            padding: 0;
+            left: 20px;
+        }
     }
 }
 .services-intro{
