--- a/css/index.css
+++ b/css/index.css
@@ -273,7 +273,7 @@ html body .container .hidden {
 }
 .home-page {
   margin: 0 auto;
-  width: 80%;
+  width: 85%;
 }
 @media (max-width: 1025px) {
   .home-page {
@@ -287,6 +287,7 @@ html body .container .hidden {
 }
 .home-page .preview .architects-container {
   display: flex;
+  width: 100%;
 }
 @media (max-width: 769px) {
   .home-page .preview .architects-container {
@@ -362,12 +363,23 @@ html body .container .hidden {
     overflow: hidden;
   }
 }
-.home-page .preview .img-wraper-two {
+.home-page .preview .designs-container {
+  display: flex;
+  width: 100%;
+}
+@media (max-width: 769px) {
+  .home-page .preview .designs-container {
+    flex-direction: column;
+    width: 100%;
+  }
+}
+.home-page .preview .designs-container .img-wraper-two {
   width: 50%;
   margin: 30px 0 30px 40px;
 }
 @media (max-width: 769px) {
-  .home-page .preview .img-wraper-two {
+  .home-page .preview .designs-container .img-wraper-two {
+    margin: 0;
     margin-top: 20px;
     margin-bottom: 0;
     margin-left: 0;
@@ -375,15 +387,15 @@ html body .container .hidden {
     overflow: hidden;
   }
 }
-.home-page .preview .designs {
+.home-page .preview .designs-container .designs {
   margin-top: 65px;
-  width: 40%;
+  width: 45%;
   flex-wrap: wrap;
   margin-bottom: 30px;
   padding-left: 10px;
 }
 @media (max-width: 769px) {
-  .home-page .preview .designs {
+  .home-page .preview .designs-container .designs {
     flex-direction: column;
     flex-wrap: none;
     margin: 0;
@@ -391,29 +403,29 @@ html body .container .hidden {
     width: 93%;
   }
 }
-.home-page .preview .designs h3 {
+.home-page .preview .designs-container .designs h3 {
   font-weight: Bold;
   font-size: 1.4rem;
   margin-bottom: 7px;
 }
 @media (max-width: 769px) {
-  .home-page .preview .designs h3 {
+  .home-page .preview .designs-container .designs h3 {
     margin: 5px;
     font-size: 2rem;
   }
 }
-.home-page .preview .designs p {
+.home-page .preview .designs-container .designs p {
   margin-bottom: 10px;
 }
 @media (max-width: 769px) {
-  .home-page .preview .designs p {
+  .home-page .preview .designs-container .designs p {
     margin: 5px;
   }
 }
-.home-page .preview .designs a {
+.home-page .preview .designs-container .designs a {
   text-decoration: none;
 }
-.home-page .preview .designs .btn {
+.home-page .preview .designs-container .designs .btn {
   border: 1px solid #222222;
   padding: 5px;
   color: #222222;
@@ -421,12 +433,12 @@ html body .container .hidden {
   text-align: center;
 }
 @media (max-width: 769px) {
-  .home-page .preview .designs .btn {
+  .home-page .preview .designs-container .designs .btn {
     width: 96.5%;
     margin-top: 25px;
   }
 }
-.home-page .preview .designs .btn:hover {
+.home-page .preview .designs-container .designs .btn:hover {
   cursor: pointer;
   background-color: aqua;
 }
@@ -442,13 +454,15 @@ html body .container .hidden {
 }
 .home-page .recent-projects .villa {
   width: 100%;
+}
+.home-page .recent-projects .villa .img-holder {
   position: relative;
 }
-.home-page .recent-projects .villa img {
+.home-page .recent-projects .villa .img-holder img {
   width: 100%;
   margin-bottom: 30px;
 }
-.home-page .recent-projects .villa h2 {
+.home-page .recent-projects .villa .img-holder h2 {
   display: flex;
   font-weight: Bold;
   font-size: 1.4rem;
@@ -458,17 +472,17 @@ html body .container .hidden {
   padding: 20px;
   justify-content: center;
   position: absolute;
-  top: 62%;
-  left: 67.5%;
+  bottom: 0px;
+  right: -2px;
 }
 @media (max-width: 769px) {
-  .home-page .recent-projects .villa h2 {
+  .home-page .recent-projects .villa .img-holder h2 {
     font-size: 2rem;
     letter-spacing: 0.6rem;
     margin: 0 auto;
     width: 81%;
-    left: 2%;
-    top: 13%;
+    left: 2px;
+    top: 80px;
   }
 }
 .home-page .recent-projects .villa .project-txt {
@@ -484,13 +498,15 @@ html body .container .hidden {
 }
 .home-page .recent-projects .outskirts {
   width: 100%;
+}
+.home-page .recent-projects .outskirts .img-holder {
   position: relative;
 }
-.home-page .recent-projects .outskirts img {
+.home-page .recent-projects .outskirts .img-holder img {
   width: 100%;
   margin-bottom: 30px;
 }
-.home-page .recent-projects .outskirts h2 {
+.home-page .recent-projects .outskirts .img-holder h2 {
   display: flex;
   font-weight: Bold;
   font-size: 1.4rem;
@@ -500,16 +516,17 @@ html body .container .hidden {
   padding: 20px;
   justify-content: center;
   position: absolute;
-  top: 62%;
+  bottom: 0px;
+  left: 0px;
 }
 @media (max-width: 769px) {
-  .home-page .recent-projects .outskirts h2 {
+  .home-page .recent-projects .outskirts .img-holder h2 {
     font-size: 2rem;
     letter-spacing: 0.6rem;
     margin: 0 auto;
     width: 81%;
-    left: 2%;
-    top: 13%;
+    left: 2px;
+    top: 80px;
   }
 }
 .home-page .recent-projects .outskirts .project-txt {
@@ -525,13 +542,15 @@ html body .container .hidden {
 }
 .home-page .recent-projects .blocks {
   width: 100%;
+}
+.home-page .recent-projects .blocks .img-holder {
   position: relative;
 }
-.home-page .recent-projects .blocks img {
+.home-page .recent-projects .blocks .img-holder img {
   width: 100%;
   margin-bottom: 30px;
 }
-.home-page .recent-projects .blocks h2 {
+.home-page .recent-projects .blocks .img-holder h2 {
   display: flex;
   font-weight: Bold;
   font-size: 1.4rem;
@@ -541,17 +560,17 @@ html body .container .hidden {
   padding: 20px;
   justify-content: center;
   position: absolute;
-  top: 62%;
-  left: 67.2%;
+  bottom: 0px;
+  right: -2px;
 }
 @media (max-width: 769px) {
-  .home-page .recent-projects .blocks h2 {
+  .home-page .recent-projects .blocks .img-holder h2 {
     font-size: 2rem;
     letter-spacing: 0.6rem;
     margin: 0 auto;
     width: 81%;
-    left: 2%;
-    top: 13%;
+    left: 2px;
+    top: 80px;
   }
 }
 .home-page .recent-projects .blocks .project-txt {
