--- a/css/index.css
+++ b/css/index.css
@@ -375,7 +375,7 @@ html body .container .hidden {
 }
 .home-page .preview .designs-container .img-wraper-two {
   width: 50%;
-  margin: 30px 0 30px 40px;
+  margin: 30px 10px 30px 40px;
 }
 @media (max-width: 769px) {
   .home-page .preview .designs-container .img-wraper-two {
@@ -393,6 +393,11 @@ html body .container .hidden {
   flex-wrap: wrap;
   margin-bottom: 30px;
   padding-left: 10px;
+}
+@media (max-width: 1482px) {
+  .home-page .preview .designs-container .designs {
+    margin-left: 40px;
+  }
 }
 @media (max-width: 769px) {
   .home-page .preview .designs-container .designs {
