--- a/less/home-pg.less
+++ b/less/home-pg.less
@@ -80,9 +80,9 @@
                 }
             }
         }
-        
         .designs-container{
             display: flex;
+            
             width: 100%;
             @media @mobile {
                 flex-direction: column;
@@ -90,7 +90,7 @@
             }
             .img-wraper-two{
             width: 50%;
-            margin: 30px 0 30px 40px;
+            margin: 30px 10px 30px 40px;
                 @media @mobile {
                     margin: 0;
                     margin-top: 20px;
@@ -103,9 +103,14 @@
             .designs{
                 margin-top: 65px;
                 width: 45%;
-                flex-wrap: wrap; 
+                flex-wrap: wrap;
+                // margin-left: 50px; 
                 margin-bottom: 30px;
                 padding-left: 10px;
+                @media @laptop{
+                    margin-left: 40px;
+                    
+                }
                 @media @mobile {
                     flex-direction: column;
                     flex-wrap: none;
